
libstateval_HEADERS = \
	GlobalVariables.h     \
	StateMachine.h     \
	stateval.h     \
	StateMachineAccess.h     \
	StateMachineThread.h     \
	Thread.h     \
	Variable.h     \
	Context.h

libstatevaldir = \
	$(pkgincludedir)

EXTRA_DIST = \
	$(libstateval_HEADERS)

SUBDIRS = \
	private

## File created by the gnome-build tools

